creation of links to ports has been moved to the directory /dev/dongle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
         "*.tcc": "c",
         "cstdint": "c",
         "fcntl.h": "c",
-        "file.h": "c"
+        "file.h": "c",
+        "dir.h": "c"
     },
     "cmake.configureOnOpen": false
 }
